--- a/_site.yml
+++ b/_site.yml
@@ -8,3 +8,7 @@ output:
     css: style.css
 navbar:
   title: "Redesigning methods"
+  right:
+  - text: "psyTeachR"
+    icon: fa-home
+    href: /
